@@ -1,6 +1,9 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.133 2005/01/02 04:15:51 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.134 2005/01/03 21:09:08 zhen Exp $
+
+  03 Jan 2005; John Davis <zhen@gentoo.org> arch/ppc.py:
+  new PPC arch file from pvdabeel@gentoo.org
 
   01 Jan 2005; John Davis <zhen@gentoo.org> catalyst,
   examples/generic_stage_template.spec, modules/catalyst_support.py:
